Fixes jump CSS

--- a/ski-freely/ski.css
+++ b/ski-freely/ski.css
@@ -33,6 +33,14 @@
   background-image: url("skidownright.png");
 }
 
+.ski-fall {
+  background-image: url("skifall.png");
+}
+
+.ski-jump {
+  background-image: url("skijump.png");
+}
+
 
 
  /* 25 px */
